--- a/index.html
+++ b/index.html
@@ -120,6 +120,15 @@
 <!-- Bouton pour changer le mode -->
 <button id="mode-toggle" class="mode-button">🌙</button>
 
+<!-- Bouton musique -->
+<button id="music-toggle" class="music-button">🔊</button>
+
+<!-- Fichier audio -->
+<audio id="background-music" loop>
+  <source src="audio/background.mp3" type="audio/mpeg">
+</audio>
+
+
   <script src="script.js"></script>
 </body>
 </html>
